methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: ')' expected but 'else' found.
                                   else {forward(); if (getGroundColor()==Color.green) {backward(); return true} else {backward(); return false}})
                                   ^SlugTracking:5: error: illegal start of simple expression
} 
^